--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,12 +33,12 @@ dependencies {
     def lifecycle_version = "2.1.0"
     def room_version = "2.2.1"
 
-    implementation 'androidx.core:core:1.2.0-beta02'
+    implementation 'androidx.core:core:1.2.0-rc01'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0-beta02'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0-rc01'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-rc01'
-    implementation 'androidx.viewpager2:viewpager2:1.0.0-rc01'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation 'androidx.drawerlayout:drawerlayout:1.1.0-alpha03'
     implementation 'androidx.preference:preference:1.1.0'
     implementation 'androidx.browser:browser:1.0.0'
